# aya-tabular-research

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  run-aya.sh  run-inspecotr.sh  setup_claude.py
.trunk/: trunk.yaml
artifacts/: aya_ya_units_report.csv  export_20250405_182209_720d08a9.csv  export_20250405_192209_f9ad88fb.csv  export_20250405_202152_c20f3616.csv  export_20250405_204541_7434de8d.csv  export_20250405_214127_02d5db45.csv  export_20250406_035646_1a6ae7a2.json  export_20250406_035657_b117e078.csv  export_20250406_170717_e3df2426.csv  export_20250406_175013_fab34f56.csv
src/aya_tabular_research/: __init__.py  mcp_interface.py  server.py
src/aya_tabular_research/core/: exceptions.py  instances.py  state_manager.py
src/aya_tabular_research/core/models/: enums.py  error_models.py  research_models.py
src/aya_tabular_research/execution/: instruction_builder.py  report_handler.py
src/aya_tabular_research/mcp_handlers/: error_handler.py  prompt_handlers.py  resource_handlers.py  tool_handlers.py
src/aya_tabular_research/planning/: planner.py
src/aya_tabular_research/storage/: data_store.py  knowledge_base.py  tabular_store.py
src/aya_tabular_research/utils/: artifact_manager.py  logging_config.py
